# burgers_static

./: CMakeLists.txt  README.rst
Fortran/: CMakeLists.txt
Fortran/src/: FortranExample.f90
src/fortran/: CMakeLists.txt  burgers_static.F90  visualiseBurgersStatic.cmgui
src/fortran/expected_results/: burgers_static.part0.exelem  burgers_static.part0.exnode  results.txt
